--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>document</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <h1>hello World</h1>
-<p>hi</p>
+<p>la la</p>
 
 </body>
 </html>
